--- a/style.scss
+++ b/style.scss
@@ -237,6 +237,7 @@ body {
 @include lessThan1200;
 @include lessThan1024;
 @include lessThan990GreatThan768;
+@include lessThan992;
 @include lessThan980;
 @include lessThan730;
 @include lessThan600;
