hoverin elave olunmasi

--- a/register.css
+++ b/register.css
@@ -79,4 +79,9 @@ body .register-box .btn {
   cursor: pointer;
   margin: 12px 0;
 }
+
+body .register-box form input:hover, body .register-box form a:hover {
+  color: #e2e2e2;
+  background-color: #5d4954;
+}
 /*# sourceMappingURL=register.css.map */
