--- a/login.scss
+++ b/login.scss
@@ -53,7 +53,7 @@ body {
                 input::placeholder {
                     $textColor: rgb(112, 110, 110);
                     color: $textColor;
-                }
+                }     
             }
             .btn {
                 width: 100%;
@@ -65,6 +65,10 @@ body {
                 font-size: 18px;
                 cursor: pointer;
                 margin: 12px 0;
+            }
+            input:hover,a:hover{
+                color: $textColor;
+                background-color: $navColor;
             }
         }
     }
