button-a hoverin elave olunmasi

--- a/register.css
+++ b/register.css
@@ -80,7 +80,7 @@ body .register-box .btn {
   margin: 12px 0;
 }
 
-body .register-box form input:hover, body .register-box form a:hover {
+body .register-box form .button-panel input:hover, body .register-box form .button-panel a:hover {
   color: #e2e2e2;
   background-color: #5d4954;
 }
