--- a/login.css
+++ b/login.css
@@ -87,7 +87,7 @@ body .register-box form .btn {
   margin: 12px 0;
 }
 
-body .register-box form input:hover, body .register-box form a:hover {
+body .register-box form .button-panel input:hover, body .register-box form .button-panel a:hover {
   color: #e2e2e2;
   background-color: #5d4954;
 }
