--- a/login.scss
+++ b/login.scss
@@ -66,9 +66,11 @@ body {
                 cursor: pointer;
                 margin: 12px 0;
             }
-            input:hover,a:hover{
-                color: $textColor;
-                background-color: $navColor;
+            .button-panel{
+                input:hover,a:hover{
+                    color: $textColor;
+                    background-color: $navColor;
+                }
             }
         }
     }
