--- a/style.scss
+++ b/style.scss
@@ -36,6 +36,15 @@ body {
                             letter-spacing: 3px;
                             font-weight: bold;
                             font-size: 14px;
+                            transition: all .5s;
+
+                        }
+                    }
+                    .active{
+                        background-color: $textColor;
+                        a{
+                            color:$navColor;
+                            transition: all .5s;
                         }
                     }
                     .panels {
